<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="gui.fragment.ModificacionFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AD000000"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvId2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_id"
            android:textSize="16dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etIdModificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:paddingEnd="15dp"
                android:textSize="18dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/btn_buscar" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNombreProducto2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/label_nombre"
        android:textSize="16dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etNombreModificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="18dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvStock2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/label_stock"
        android:textSize="16dp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/etStockModificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textSize="18dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvCategoria2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:text="@string/label_categoria"
        android:textSize="16dp"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spCategoriaModificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:scrollbarSize="30dp"
        android:spinnerMode="dropdown"
        tools:ignore="SpeakableTextPresentCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/btn_modificar" />

</LinearLayout>